welcome.lessons.welcome.bat.bool1.LastDigit.scala.error
lastDigit:8: error: type mismatch;
 found   : Unit
 required: Boolean
	if (((Math.max(a,b))-(Math.min(a,b))%10)!=0) {
        ^