welcome.lessons.welcome.bat.bool1.LastDigit.scala.code
def lastDigit(a:Int, b:Int):Boolean = {
	if (((Math.max(a,b))%(Math.min(a,b))==3)) {
		return true;
	}
	if (((Math.max(a,b))%(Math.min(a,b))==2)) {
		return true;
	}
	if (((Math.max(a,b))-(Math.min(a,b))%10)!=0) {
	return true;
	}
}
